Add Hasicsky dum

--- a/menicka-ricky.html
+++ b/menicka-ricky.html
@@ -9,6 +9,7 @@
 		<ul>
 			<li><a href="https://www.restaurantnanavsi.cz/#denni-menu">Restaurace Na Návsi</a> - Říčany u Brna - Brněnská 53</li>
 			<li><a href="http://www.kobero.cz/restaurace/tydenni-menu/">Hotel Kobero</a> - Říčany u Brna - Brněnská 311</li>
+			<li><a href="https://www.hotelricany.cz/menu">Restaurace Hasičský dům</a> - Říčany u Brna - Rosická 518</li>
 			<li><a href="http://www.penzionunemcu.cz/denni-menu/">Restaurace a pension U Němců</a> - Domašov - Na Náměstí 47</li>
 			<li><a href="https://www.hoteld1.cz/poledni-menu/">Hotel D1</a> - Ostrovačice - Veveří 260</li>
 		</ul>
