--- a/menicka-ricky.html
+++ b/menicka-ricky.html
@@ -7,11 +7,17 @@
 	<body>
 		<h1>Denní menu v okolí Říček</h1>
 		<ul>
+			<h3>Říčany u Brna</h3>
 			<li><a href="https://www.restaurantnanavsi.cz/#denni-menu">Restaurace Na Návsi</a> - Říčany u Brna - Brněnská 53</li>
 			<li><a href="http://www.kobero.cz/restaurace/tydenni-menu/">Hotel Kobero</a> - Říčany u Brna - Brněnská 311</li>
 			<li><a href="https://www.hotelricany.cz/menu">Restaurace Hasičský dům</a> - Říčany u Brna - Rosická 518</li>
+			<h3>Domašov</h3>
 			<li><a href="http://www.penzionunemcu.cz/denni-menu/">Restaurace a pension U Němců</a> - Domašov - Na Náměstí 47</li>
+			<h3>Ostrovačice</h3>
 			<li><a href="https://www.hoteld1.cz/poledni-menu/">Hotel D1</a> - Ostrovačice - Veveří 260</li>
+			<h3>Rosice</h3>
+			<li><a href="https://www.razdvarestaurant.cz/#poledni-menu">Raz Dva Restaurant</a> - Rosice - Palackého náměstí 1600</li>
+			<li><a href="https://www.facebook.com/PizzaBorsaCZ/">Pizzerie Borsa</a> - Rosice - Palackého náměstí 45</li>
 		</ul>
 	</body>
 </html>
