--- a/menicka-ricky.html
+++ b/menicka-ricky.html
@@ -12,7 +12,7 @@
 			<li><a href="http://www.kobero.cz/restaurace/tydenni-menu/">Hotel Kobero</a> - Říčany u Brna - Brněnská 311</li>
 			<li><a href="https://www.hotelricany.cz/menu">Restaurace Hasičský dům</a> - Říčany u Brna - Rosická 518</li>
 			<h3>Ostrovačice</h3>
-			<li><a href="https://www.hoteld1.cz/poledni-menu/">Hotel D1</a> - Ostrovačice - Veveří 260</li>
+			<li><a href="https://www.hoteld1.cz/o-restauraci/#meal">Hotel D1</a> - Ostrovačice - Veveří 260</li>
 			<h3>Rosice</h3>
 			<li><a href="https://www.razdvarestaurant.cz/#poledni-menu">Raz Dva Restaurant</a> - Rosice - Palackého náměstí 1600</li>
 			<li><a href="https://www.facebook.com/PizzaBorsaCZ/">Pizzerie Borsa</a> - Rosice - Palackého náměstí 45</li>
