--- a/menicka-ricky.html
+++ b/menicka-ricky.html
@@ -3,22 +3,31 @@
 <html>
 	<head>
 		<title>Denní menu v okolí Říček</title>
+		<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
 	</head>
 	<body>
 		<h1>Denní menu v okolí Říček</h1>
+		<h2>Říčany u Brna</h2>
 		<ul>
-			<h3>Říčany u Brna</h3>
 			<li><a href="https://www.restaurantnanavsi.cz/#denni-menu">Restaurace Na Návsi</a> - Říčany u Brna - Brněnská 53</li>
 			<li><a href="http://www.kobero.cz/restaurace/tydenni-menu/">Hotel Kobero</a> - Říčany u Brna - Brněnská 311</li>
 			<li><a href="https://www.hotelricany.cz/menu">Restaurace Hasičský dům</a> - Říčany u Brna - Rosická 518</li>
-			<h3>Ostrovačice</h3>
+		</ul>
+		<h2>Ostrovačice</h2>
+		<ul>
 			<li><a href="https://www.hoteld1.cz/o-restauraci/#meal">Hotel D1</a> - Ostrovačice - Veveří 260</li>
-			<h3>Rosice</h3>
+		</ul>
+		<h2>Rosice</h2>
+		<ul>
 			<li><a href="https://www.razdvarestaurant.cz/#poledni-menu">Raz Dva Restaurant</a> - Rosice - Palackého náměstí 1600</li>
 			<li><a href="https://www.facebook.com/PizzaBorsaCZ/">Pizzerie Borsa</a> - Rosice - Palackého náměstí 45</li>
 			<li><a href="https://www.rozsochac.cz/menu">Restaurace Rozsocháč</a> - Rosice - Říčanská 1333</li>
 			<li><a href="https://www.rosicko.cz/poledni-menu/16795-restaurace-na-jedno/">Restaurace Na Jedno</a> - Rosice - Nádražní 755</li>
-			<h3>Domašov</h3>
+			<li><a href="https://www.facebook.com/kontifood/menu">Kontifood bistro</a> - Rosice - Brněnská 1235</li>
+			<li><a href="https://www.facebook.com/donerkebabrosice/menu">Döner Kebab Rosice</a> - Rosice - Brněnská 1235</li>
+		</ul>
+		<h2>Domašov</h2>
+		<ul>
 			<li><a href="http://www.penzionunemcu.cz/denni-menu/">Restaurace a pension U Němců</a> - Domašov - Na Náměstí 47</li>
 		</ul>
 	</body>
