--- a/menicka-ricky.html
+++ b/menicka-ricky.html
@@ -10,7 +10,6 @@
 		<h2>Říčany u Brna</h2>
 		<ul>
 			<li><a href="https://www.restaurantnanavsi.cz/#denni-menu">Restaurace Na Návsi</a> - Říčany u Brna - Brněnská 53</li>
-			<li><a href="http://www.kobero.cz/restaurace/tydenni-menu/">Hotel Kobero</a> - Říčany u Brna - Brněnská 311</li>
 			<li><a href="https://www.hotelricany.cz/menu">Restaurace Hasičský dům</a> - Říčany u Brna - Rosická 518</li>
 		</ul>
 		<h2>Ostrovačice</h2>
@@ -29,6 +28,11 @@
 		<h2>Domašov</h2>
 		<ul>
 			<li><a href="http://www.penzionunemcu.cz/denni-menu/">Restaurace a pension U Němců</a> - Domašov - Na Náměstí 47</li>
+		</ul>
+		<h1>Rozvozy v okolí Říček</h1>
+		<ul>
+			<li><a href="https://www.pizzakobero.cz/">Kobero</a> - Říčany u Brna - Brněnská 311</li>
+			<li><a href="https://www.damejidlo.cz/">Dáme jídlo.</a></li>
 		</ul>
 	</body>
 </html>
