Add kebab delivery

--- a/menicka-ricky.html
+++ b/menicka-ricky.html
@@ -23,7 +23,8 @@
 			<li><a href="https://www.rozsochac.cz/menu">Restaurace Rozsocháč</a> - Rosice - Říčanská 1333</li>
 			<li><a href="https://www.rosicko.cz/poledni-menu/16795-restaurace-na-jedno/">Restaurace Na Jedno</a> - Rosice - Nádražní 755</li>
 			<li><a href="https://www.facebook.com/kontifood/menu">Kontifood bistro</a> - Rosice - Brněnská 1235</li>
-			<li><a href="https://www.facebook.com/donerkebabrosice/menu">Döner Kebab Rosice</a> - Rosice - Brněnská 1235</li>
+			<li><a href="https://www.facebook.com/donerkebabrosice/menu">Döner Kebab Rosice</a> - Rosice - Brněnská 1235
+				(i <a href="https://kebabrosice.cz/">rozvoz</a>)</li>
 		</ul>
 		<h2>Domašov</h2>
 		<ul>
