Add rozvoz Na Jedno

--- a/menicka-ricky.html
+++ b/menicka-ricky.html
@@ -32,7 +32,8 @@
 		</ul>
 		<h1>Rozvozy v okolí Říček</h1>
 		<ul>
-			<li><a href="https://www.pizzakobero.cz/">Kobero</a> - Říčany u Brna - Brněnská 311</li>
+			<li><a href="https://www.pizzakobero.cz/">Kobero</a> - Říčany u Brna - Brněnská 311 (minimum pro rozvoz zdarma 300Kč)</li>
+			<li><a href="https://www.restauracenajedno.cz/">Restaurace Na Jedno</a> - Rosice - Nádražní 755 (minimální objednávka 250Kč)</li>
 			<li><a href="https://www.damejidlo.cz/">Dáme jídlo.</a></li>
 		</ul>
 	</body>
