Add Pizzerie Tetčice

--- a/menicka-ricky.html
+++ b/menicka-ricky.html
@@ -23,18 +23,20 @@
 			<li><a href="https://www.rozsochac.cz/menu">Restaurace Rozsocháč</a> - Rosice - Říčanská 1333</li>
 			<li><a href="https://www.rosicko.cz/poledni-menu/16795-restaurace-na-jedno/">Restaurace Na Jedno</a> - Rosice - Nádražní 755</li>
 			<li><a href="https://www.facebook.com/kontifood/menu">Kontifood bistro</a> - Rosice - Brněnská 1235</li>
-			<li><a href="https://www.facebook.com/donerkebabrosice/menu">Döner Kebab Rosice</a> - Rosice - Brněnská 1235
-				(i <a href="https://kebabrosice.cz/">rozvoz</a>)</li>
+			<li><a href="https://www.facebook.com/donerkebabrosice/menu">Döner Kebab Rosice</a> - Rosice - Brněnská 1235</li>
 		</ul>
 		<h2>Domašov</h2>
 		<ul>
 			<li><a href="http://www.penzionunemcu.cz/denni-menu/">Restaurace a pension U Němců</a> - Domašov - Na Náměstí 47</li>
 		</ul>
+		<hr/>
 		<h1>Rozvozy v okolí Říček</h1>
 		<ul>
 			<li><a href="https://www.pizzakobero.cz/">Kobero</a> - Říčany u Brna - Brněnská 311 (minimum pro rozvoz zdarma 300Kč)</li>
 			<li><a href="https://www.restauracenajedno.cz/">Restaurace Na Jedno</a> - Rosice - Nádražní 755 (minimální objednávka 250Kč)</li>
-			<li><a href="https://www.damejidlo.cz/">Dáme jídlo.</a></li>
+			<li><a href="https://kebabrosice.cz">Döner Kebab Rosice</a> - Rosice - Brněnská 1235</li>
+			<li><a href="https://www.pizzerietetcice.cz/">Pizzerie Tetčice</a> - Tetčice - Palackého 14 (doprava na Říčky za 45 Kč)
+			<li><a href="https://www.damejidlo.cz/restaurants/new?lat=49.23278438431462&lng=16.35649985899963&vertical=restaurants">Dáme jídlo.</a></li>
 		</ul>
 	</body>
 </html>
