U Němců temporarily closed

--- a/menicka-ricky.html
+++ b/menicka-ricky.html
@@ -27,7 +27,7 @@
 		</ul>
 		<h2>Domašov</h2>
 		<ul>
-			<li><a href="http://www.penzionunemcu.cz/denni-menu/">Restaurace a pension U Němců</a> - Domašov - Na Náměstí 47</li>
+			<li><s><a href="http://www.penzionunemcu.cz/denni-menu/">Restaurace a pension U Němců</a> - Domašov - Na Náměstí 47</s> (dočasně zavřeno)</li>
 		</ul>
 		<hr/>
 		<h1>Rozvozy v okolí Říček</h1>
