U Nemcu opened again

--- a/menicka-ricky.html
+++ b/menicka-ricky.html
@@ -7,6 +7,10 @@
 	</head>
 	<body>
 		<h1>Denní menu v okolí Říček</h1>
+		<h2>Domašov</h2>
+		<ul>
+			<li><a href="http://www.penzionunemcu.cz/denni-menu/">Restaurace a pension U Němců</a> - Domašov - Na Náměstí 47</li>
+		</ul>
 		<h2>Říčany u Brna</h2>
 		<ul>
 			<li><a href="https://www.restaurantnanavsi.cz/#denni-menu">Restaurace Na Návsi</a> - Říčany u Brna - Brněnská 53</li>
@@ -24,10 +28,6 @@
 			<li><a href="https://www.rosicko.cz/poledni-menu/16795-restaurace-na-jedno/">Restaurace Na Jedno</a> - Rosice - Nádražní 755</li>
 			<li><a href="https://www.facebook.com/kontifood/menu">Kontifood bistro</a> - Rosice - Brněnská 1235</li>
 			<li><a href="https://www.facebook.com/donerkebabrosice/menu">Döner Kebab Rosice</a> - Rosice - Brněnská 1235</li>
-		</ul>
-		<h2>Domašov</h2>
-		<ul>
-			<li><s><a href="http://www.penzionunemcu.cz/denni-menu/">Restaurace a pension U Němců</a> - Domašov - Na Náměstí 47</s> (dočasně zavřeno)</li>
 		</ul>
 		<hr/>
 		<h1>Rozvozy v okolí Říček</h1>
