--- a/menicka-ricky.html
+++ b/menicka-ricky.html
@@ -19,6 +19,7 @@
 		<h2>Ostrovačice</h2>
 		<ul>
 			<li><a href="https://www.hoteld1.cz/o-restauraci/#meal">Hotel D1</a> - Ostrovačice - Veveří 260</li>
+			<li><a href="https://www.facebook.com/kontifood/menu">Kontifood bistro</a> - Ostrovačice - Osvobození 258 (stálé menu)</li>
 		</ul>
 		<h2>Rosice</h2>
 		<ul>
@@ -26,7 +27,6 @@
 			<li><a href="https://www.facebook.com/PizzaBorsaCZ/">Pizzerie Borsa</a> - Rosice - Palackého náměstí 45</li>
 			<li><a href="https://www.rozsochac.cz/menu">Restaurace Rozsocháč</a> - Rosice - Říčanská 1333</li>
 			<li><a href="https://www.rosicko.cz/poledni-menu/16795-restaurace-na-jedno/">Restaurace Na Jedno</a> - Rosice - Nádražní 755</li>
-			<li><a href="https://www.facebook.com/kontifood/menu">Kontifood bistro</a> - Rosice - Brněnská 1235</li>
 			<li><a href="https://www.facebook.com/donerkebabrosice/menu">Döner Kebab Rosice</a> - Rosice - Brněnská 1235</li>
 		</ul>
 		<hr/>
